--- a/PROJETO-TESTE-2/loja/loja.html
+++ b/PROJETO-TESTE-2/loja/loja.html
@@ -22,7 +22,7 @@
     </button>
   </div>
 
-  <h2>Loja de Tênis </h2>
+  <h2>Loja de Taaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaênis </h2>
   <div class="container" id="produtos-container">
     <!-- Os cards serão inseridos aqui via JavaScript -->
   </div>
