--- a/PROJETO-2/loja/gerente-produto/produto.html
+++ b/PROJETO-2/loja/gerente-produto/produto.html
@@ -20,7 +20,7 @@
     <form id="form-produto">
       <input type="hidden" id="produto-id" />
       <input type="text" id="nome" placeholder="Nome" required />
-      <input type="number" id="preco" placeholder="Preço" required />
+      <input type="number" id="preco" placeholder="Preço (ex: 259.90)" step="0.01" min="0" required />
 
       <!-- Nova seção para upload de imagem -->
       <div class="upload-section">
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <input type="number" id="quantidade" placeholder="Quantidade" required />
+      <input type="number" id="quantidade" placeholder="Quantidade" min="0" required />
       <input type="text" id="features" placeholder="Descrição (separada por |)" />
       <button type="submit">Salvar Produto</button>
     </form>
