--- a/LOGIN/login.html
+++ b/LOGIN/login.html
@@ -23,7 +23,7 @@
       <input type="password" id="senha" placeholder="Senha" required />
       <button type="submit">Entrar</button>
     </form>
-    <p>Não tem conta? <a href=/cadastro/cadastro.html">Cadastre-se</a></p>
+    <p>Não tem conta? <a href="/cadastro/cadastro.html">Cadastre-se</a></p>
 
     <!-- Botão para voltar (aparece apenas quando vem do pagamento) -->
     <div id="botao-voltar" style="display: none; margin-top: 15px;">
@@ -35,7 +35,7 @@
   </div>
 
   <script src="/public/session-manager.js"></script>
-  <script src="/LOGIN/loja.js"></script>
+  <script src="/LOGIN/login.js"></script>
 </body>
 
 </html>
