funcionando-com-novo-login-javascript

--- a/PROJETO-2/carrinho/carrinho.html
+++ b/PROJETO-2/carrinho/carrinho.html
@@ -65,18 +65,19 @@
   <div class=" barra-acesso">
     <!-- Barra flutuante de acesso rápido -->
 
-  <a href="/PROJETO-2/loja/loja.html" title="Loja">👟</a>
-  <!-- Botão para voltar à loja, com ícone de tênis -->
+    <a href="/PROJETO-2/loja/loja.html" title="Loja">👟</a>
+    <!-- Botão para voltar à loja, com ícone de tênis -->
 
-  <a href="/PROJETO-2/carrinho/carrinho.html" title="Carrinho">🛒</a>
-  <!-- Botão para a página do carrinho, com ícone de carrinho -->
+    <a href="/PROJETO-2/carrinho/carrinho.html" title="Carrinho">🛒</a>
+    <!-- Botão para a página do carrinho, com ícone de carrinho -->
 
-  <a href="/PROJETO-2/pagamento/pagamento.html" title="Pagamento">💸</a>
-  <!-- Botão para ir à página de pagamento, com ícone de dinheiro -->
+    <a href="/PROJETO-2/pagamento/pagamento.html" title="Pagamento">💸</a>
+    <!-- Botão para ir à página de pagamento, com ícone de dinheiro -->
 
   </div>
+  
+  <script src="/PROJETO-2/carrinho/login-utils.js"></script>
 
-  <script src="/PROJETO-2/loja/loja.js"></script> <!--funções do login -->
 
   <script>
     window.onload = function () {
