--- a/PROJETO-2/loja/gerente-admp/admp.html
+++ b/PROJETO-2/loja/gerente-admp/admp.html
@@ -23,18 +23,14 @@
     </table>
 
     <div class="acoes-gerente">
-      <button onclick="adicionarUsuario()">➕ Adicionar Usuário</button>
-      <button onclick="atualizarUsuario()">✏️ Atualizar Usuário</button>
-      <button onclick="deletarUsuario()">🗑️ Deletar Usuário</button>
+      <button type="button" onclick="adicionarUsuario()">➕ Adicionar Usuário</button>
+      <button type="button" onclick="atualizarUsuario()">✏️ Atualizar Usuário</button>
+      <button type="button" onclick="deletarUsuario()">🗑️ Deletar Usuário</button>
       <br><br>
       <input type="file" id="arquivo-csv" accept=".csv">
-      <button onclick="importarCSV()">📥 Importar CSV</button>
-      <button onclick="baixarCSV()">📤 Exportar CSV</button>
+      <button type="button" onclick="importarCSV()">📥 Importar CSV</button>
+      <button type="button" onclick="exportarCSV()">📤 Exportar CSV</button>
     </div>
-
-
-
-
 
     <a href="/PROJETO-2/loja/loja.html" class="botao-voltar">← Voltar à loja</a>
   </div>
