pagamento-com-funcoes-de-login-javascript

--- a/PROJETO-2/pagamento/pagamento.html
+++ b/PROJETO-2/pagamento/pagamento.html
@@ -75,6 +75,8 @@
   <!-- Importação do script JavaScript local da página -->
   <script src="/PROJETO-2/pagamento/pagamento.js"></script>
 
+  <script src="/PROJETO-2/pagamento/login-utils.js"></script>
+
 </body>
 
 </html> <!-- Fim do documento HTML -->
