--- a/PROJETO-2/loja/loja.html
+++ b/PROJETO-2/loja/loja.html
@@ -26,6 +26,13 @@
     </button>
   </div>
 
+  <!-- Nova Barra de Navegação Elegante -->
+  <nav class="barra-navegacao">
+    <a href="/PROJETO-2/loja/loja.html" class="ativo" title="Loja">Loja</a>
+    <a href="/PROJETO-2/carrinho/carrinho.html" title="Carrinho">Carrinho</a>
+    <a href="/PROJETO-2/pagamento/pagamento.html" title="Pagamento">Pagamento</a>
+  </nav>
+
   <h2>Loja de Tênis</h2>
 
   <!-- Container de produtos -->
@@ -33,19 +40,12 @@
 
   <!-- Botões do gerente -->
   <div id="botoes-gerente" class="barra-gerente" style="display: none;">
-  <a href="/PROJETO-2/loja/gerente-produto/produto.html" class="botao-gerente">📦 Produto</a>
-  <a href="/PROJETO-2/loja/gerente-admp/admp.html" class="botao-gerente">🛠 ADMP</a>
-</div>
+    <a href="/PROJETO-2/loja/gerente-produto/produto.html" class="botao-gerente">📦 Produto</a>
+    <a href="/PROJETO-2/loja/gerente-admp/admp.html" class="botao-gerente">🛠 ADMP</a>
+  </div>
 
   <!-- Scripts -->
   <script src="/public/session-manager.js"></script>
-<script src="/PROJETO-2/loja/loja.js"></script>
-
-  <!-- Barra de acesso rápido -->
- <div class="barra-acesso">
-  <a href="/PROJETO-2/loja/loja.html" title="Loja">👟</a>
-  <a href="/PROJETO-2/carrinho/carrinho.html" title="Carrinho">🛒</a>
-  <a href="/PROJETO-2/pagamento/pagamento.html" title="Pagamento">💸</a>
-</div>
+  <script src="/PROJETO-2/loja/loja.js"></script>
 </body>
 </html>
