--- a/PROJETO-2/carrinho/carrinho.html
+++ b/PROJETO-2/carrinho/carrinho.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
-<!-- Define que este é um documento HTML5 -->
-
 <html lang="pt-BR">
-<!-- Início do documento HTML com idioma definido como português do Brasil -->
-
 <head>
   <meta charset="UTF-8">
-  <!-- Define a codificação de caracteres como UTF-8 (permite acentos, por exemplo) -->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Garante que o site seja responsivo em dispositivos móveis -->
-
-  <title>Carrinho - Loja de Tênis </title>
-  <!-- Título da aba do navegador -->
-
+  <title>Carrinho - Loja de Tênis</title>
   <link rel="stylesheet" href="/PROJETO-2/carrinho/carrinho.css">
-  <!-- Importa o arquivo CSS com os estilos da página -->
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <!-- Inicia uma conexão antecipada com o servidor do Google Fonts (melhora o desempenho) -->
-
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Conexão antecipada com outro servidor do Google Fonts (com permissão de compartilhamento cruzado) -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Tagesschrift&display=swap"
-    rel="stylesheet">
-  <!-- Importa as fontes "Open Sans" e "Tagesschrift" do Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Tagesschrift&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Corpo da página: tudo o que aparece visualmente no navegador -->
-
-  <h1>Carrinho - Loja de Tênis </h1>
-  <!-- Título principal da página -->
-
-  <h2>Itens no Carrinho</h2>
-  <!-- Subtítulo indicando o conteúdo abaixo -->
-
-
+  <!-- Barra de Navegação Superior -->
+  <nav class="barra-navegacao">
+    <a href="/PROJETO-2/loja/loja.html">Loja</a>
+    <a href="/PROJETO-2/carrinho/carrinho.html" class="ativo">Carrinho</a>
+    <a href="/PROJETO-2/pagamento/pagamento.html">Pagamento</a>
+  </nav>
 
   <!-- Área de Login -->
   <div class="login-area">
@@ -48,46 +26,23 @@
     </button>
   </div>
 
+  <!-- Conteúdo Principal -->
+  <div class="conteudo-principal">
+    <h1>Carrinho - Loja de Tênis</h1>
+    <h2>Itens no Carrinho</h2>
 
-
-
-
-  <main>
-    <!-- Área principal do conteúdo da página -->
-
-    <section id="carrinho"></section>
-    <!-- Seção com ID "carrinho" onde os itens serão inseridos via JavaScript -->
-  </main>
+    <main>
+      <section id="carrinho"></section>
+    </main>
+  </div>
 
   <script src="/PROJETO-2/carrinho/carrinho.js"></script>
-  <!-- Importa o arquivo JavaScript que gerencia os itens do carrinho -->
-
-  <div class=" barra-acesso">
-    <!-- Barra flutuante de acesso rápido -->
-
-    <a href="/PROJETO-2/loja/loja.html" title="Loja">👟</a>
-    <!-- Botão para voltar à loja, com ícone de tênis -->
-
-    <a href="/PROJETO-2/carrinho/carrinho.html" title="Carrinho">🛒</a>
-    <!-- Botão para a página do carrinho, com ícone de carrinho -->
-
-    <a href="/PROJETO-2/pagamento/pagamento.html" title="Pagamento">💸</a>
-    <!-- Botão para ir à página de pagamento, com ícone de dinheiro -->
-
-  </div>
-  
   <script src="/PROJETO-2/carrinho/login-utils.js"></script>
-
 
   <script>
     window.onload = function () {
       verificarUsuario();
     };
   </script>
-
-
-
 </body>
-
 </html>
-<!-- Fim do documento HTML -->
